fix channel box spacing

--- a/app/assets/stylesheets/catarse_bootstrap/pages/shared/_project_box.sass
+++ b/app/assets/stylesheets/catarse_bootstrap/pages/shared/_project_box.sass
@@ -2,7 +2,7 @@
   margin-top: 2em
 
 .project-box
-  height: 380px
+  height: 415px
   box-shadow: 0 1px 4px darken(lightgray, 10%)
   position: relative
   +transition(all .2s)
@@ -20,8 +20,8 @@
     opacity: 1
     &:hover
       opacity: .9
-      > .title a
-        text-decoration: underline !important
+    img
+      height: 185px
 
   .title
     margin: .4em 0
@@ -59,7 +59,7 @@
     font-size: .6em
     text-transform: uppercase
     vertical-align: middle
-    margin: 0 0 .8em
+    margin: .4em 0 .8em
     span
       font-weight: bold
       font-size: 1.4em
@@ -87,7 +87,6 @@
       font-weight: bold
       font-size: 1.4em
       text-transform: none
-      margin-bottom: .2em
 
   .money-raised
     float: right
